# SkeletonAnalyser

./: .gitignore  CMakeCache.txt  Makefile  README.md
NuitrackSDK/Examples/nuitrack_csharp_sample/: README.txt
NuitrackSDK/Examples/nuitrack_csharp_sample/cmake/: FindDotNetFrameworkSDK.cmake
NuitrackSDK/Examples/nuitrack_gl_sample/: CMakeLists.txt
NuitrackSDK/Examples/nuitrack_gl_sample/src/: NuitrackGLSample.cpp  NuitrackGLSample.h  main.cpp
NuitrackSDK/Examples/nuitrack_ni_gl_sample/: CMakeLists.txt
NuitrackSDK/Examples/nuitrack_ni_gl_sample/OpenNI/Include/: XnContext.h  XnCppWrapper.h  XnPlatform.h
NuitrackSDK/Examples/nuitrack_ni_gl_sample/src/: main.cpp
OpenPose/: CMakeLists.txt  main.cpp  op.h
probe_scanner/: .cproject  .mxproject  .project  STM32L432KCUX_FLASH.ld  probe_scanner Release.launch  probe_scanner.ioc
probe_scanner/.metadata/: .log4j.xml  version.ini
probe_scanner/.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
probe_scanner/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
probe_scanner/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
probe_scanner/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
probe_scanner/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
probe_scanner/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
probe_scanner/Core/Inc/: main.h  stm32l4xx_hal_conf.h
probe_scanner/Core/Src/: gpio.c  i2c.c  main.c  stm32l4xx_hal_msp.c
testCV/: Makefile  ex_opencv.cpp  exemple
(+3 files in other folders)
